--- a/catgun.html
+++ b/catgun.html
@@ -17,7 +17,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Sohee Kim</span>
+									<span class="symbol"></span><span class="title">Sohee Kim</span>
 								</a>
 
 							<!-- Nav -->
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<h1>Cat Gun</h1>
 							<video src="images/cat gun 2.mp4" controls></video>
-							<p>this is car gun</p>
+							<p>A stuffed animal embedded with motion sensor used to control the players movement inside a game</p>
 						</div>
 					</div>
 
