--- a/celestial.html
+++ b/celestial.html
@@ -17,7 +17,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Sohee Kim</span>
+									<span class="symbol"></span><span class="title">Sohee Kim</span>
 								</a>
 
 							<!-- Nav -->
