--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Sohee Kim</span>
+									<span class="symbol"></span><span class="title">Sohee Kim</span>
 								</a>
 
 							<!-- Nav -->
@@ -101,6 +101,50 @@
 										<h2>Cat Gun</h2>
 										<div class="content">
 											<p>Unity game with handmade controler</p>
+										</div>
+									</a>
+								</article>
+								<article class="style6">
+									<span class="image">
+										<img src="images/project.gif" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+									</span>
+									<a href="entangled.html">
+										<h2>Entangled Destiny</h2>
+										<div class="content">
+											<p>Immersive expereince that used quantum themes within the instillation</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/IMG_8055.jpg" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+									</span>
+									<a href="artwork.html">
+										<h2>Artworks</h2>
+										<div class="content">
+											<p>My previous artistic pieces</p>
+										</div>
+									</a>
+								</article>
+								<article class="style2">
+									<span class="image">
+										<img src="images/photo2.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+									</span>
+									<a href="photography.html">
+										<h2>Photography</h2>
+										<div class="content">
+											<p>My previous photographic pieces</p>
+										</div>
+									</a>
+								</article>
+								<article class="style3">
+									<span class="image">
+										<img src="images/touch.jpg" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+									</span>
+									<a href="touch.html">
+										<h2>Touch</h2>
+										<div class="content">
+											<p>An interactive art piece</p>
 										</div>
 									</a>
 								</article>
