--- a/photography.html
+++ b/photography.html
@@ -65,8 +65,10 @@
                             <div class="artwork">
                                 <img src="images/photo2.png" alt="" />
                             </div>
+                        </div>
+                        <div class="photo-column">
                             <div class="artwork">
-                                <img src="images/photo5.png" alt="" />
+                                <img src="images/photo3.png" alt="" />
                             </div>
                         </div>
                     </div>
