--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<h1>About Me</h1>
 							<span class="image main"><img src="images/profile.jpg" style="width: 20%; height: 20%;" alt="A picture of me" /></span>
-							<p>I was the little kid behind the cash register at the deli my parents ran. I could make a mean sandwich like nobody's business. But when customers weren't around I was drawing on yellow legal pads behind the counter. I was born in Seoul but from the age of two, grew up as a true Midwesterner. I had an insatiable appetite to create- from drawing to painting to posting animations onto YouTube. I won many gold key Scholastic Art awards but I didn't realize that my creativity could translate into the workforce until later. </p>
+							<p>I was born in Seoul but from the age of two, grew up as a true Midwesterner. I had an insatiable appetite to create- from drawing to painting to posting animations onto YouTube. I won many gold key Scholastic Art awards but I didn't realize that my creativity could translate into the workforce until later. </p>
 							<p>I began my educational career at the University of Michigan and then transferred to Oakton College, where I was able to more freely explore my interests, from photography, painting, and sculpture to 3D modeling, electrical engineering, and robotics. Now I am enjoying my time at Parsons School of Design at The New School studying Design & Technology with a focus in creative technology. I am proficient in Adobe Photoshop, Adobe Illustrator, Autodesk Maya, Blender, Microsoft Excel, HTML, CSS, Javascript, Python, and physical computing.</p>
 						</div>
 					</div>
