--- a/entangled.html
+++ b/entangled.html
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<h1>Entangled Destiny</h1>
                             <p>An immersive match-making experience where participants search for themselves and interact with each other in multiple real-time body tracking visual installations along with Quantum music in the background.</p>
-							<video src="https://drive.google.com/file/d/1jvQpvZGTw59h-gpE_vR6duwbaW4hhaqY/view?usp=sharing" controls width="1280" height="720"></video>
+							<iframe src="https://drive.google.com/file/d/1jvQpvZGTw59h-gpE_vR6duwbaW4hhaqY/preview" width="640" height="480" allow="autoplay"></iframe>
 						</div>
 					</div>
 
