--- a/index.html
+++ b/index.html
@@ -48,7 +48,96 @@
 								<h1>Previous Works</h1>
 								<p>Hello! I am a senior at Parsons School of Design at The New School studying Design & Technology with a focus in creative technology. My background is in fine arts and robotics. I am proficient in Adobe Photoshop, Adobe Illustrator, Autodesk Maya, Blender, Microsoft Excel, HTML, CSS, Javascript, Python, and physical computing.</p>
 							</header>
-							<section class="tiles">
+								<section class="tiles">
+									<section class="tiles">
+										<article class="style6">
+											<span class="image">
+												<img src="images/project.gif" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+											</span>
+											<a href="entangled.html">
+												<h2>Entangled Destiny</h2>
+												<div class="content">
+													<p>Immersive expereince that used quantum themes within the instillation</p>
+												</div>
+											</a>
+										</article>
+									<article class="style6">
+										<span class="image">
+											<img src="images/outside.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+										</span>
+										<a href="outside.html">
+											<h2>Outside</h2>
+											<div class="content">
+												<p>Outside</p>
+											</div>
+										</a>
+									</article>
+									<article class="style3">
+										<span class="image">
+											<img src="images/flyingpig.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+										</span>
+										<a href="pigsfly.html">
+											<h2>Pigs Fly</h2>
+											<div class="content">
+												<p>Motion controlled game</p>
+											</div>
+										</a>
+									</article>
+									<article class="style1">
+										<span class="image">
+											<img src="images/IMG_8055.jpg" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+										</span>
+										<a href="artwork.html">
+											<h2>Artworks</h2>
+											<div class="content">
+												<p>My previous artistic pieces</p>
+											</div>
+										</a>
+									</article>
+									<article class="style2">
+										<span class="image">
+											<img src="images/photo2.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+										</span>
+										<a href="photography.html">
+											<h2>Photography</h2>
+											<div class="content">
+												<p>My previous photographic pieces</p>
+											</div>
+										</a>
+									</article>
+									<article class="style3">
+										<span class="image">
+											<img src="images/render1.jpg" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+										</span>
+										<a href="3dwork.html">
+											<h2>3D Modeling</h2>
+											<div class="content">
+												<p>My 3D modeling work</p>
+											</div>
+										</a>
+									</article>
+									<article class="style5">
+										<span class="image">
+											<img src="images/cat gun 3.PNG" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+										</span>
+										<a href="catgun.html">
+											<h2>Cat Gun</h2>
+											<div class="content">
+												<p>Unity game with handmade controler</p>
+											</div>
+										</a>
+									</article>
+									<article class="style3">
+										<span class="image">
+											<img src="images/touch.jpg" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+										</span>
+										<a href="touch.html">
+											<h2>You are the only one for me</h2>
+											<div class="content">
+												<p>An interactive art piece</p>
+											</div>
+										</a>
+									</article>
 								<article class="style1">
 									<span class="image">
 										<img src="images/celestialpets.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
@@ -90,61 +179,6 @@
 										<h2>Thi</h2>
 										<div class="content">
 											<p>Electronic stuffed animal</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/cat gun 3.PNG" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
-									</span>
-									<a href="catgun.html">
-										<h2>Cat Gun</h2>
-										<div class="content">
-											<p>Unity game with handmade controler</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/project.gif" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
-									</span>
-									<a href="entangled.html">
-										<h2>Entangled Destiny</h2>
-										<div class="content">
-											<p>Immersive expereince that used quantum themes within the instillation</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/IMG_8055.jpg" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
-									</span>
-									<a href="artwork.html">
-										<h2>Artworks</h2>
-										<div class="content">
-											<p>My previous artistic pieces</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/photo2.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
-									</span>
-									<a href="photography.html">
-										<h2>Photography</h2>
-										<div class="content">
-											<p>My previous photographic pieces</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/touch.jpg" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
-									</span>
-									<a href="touch.html">
-										<h2>Touch</h2>
-										<div class="content">
-											<p>An interactive art piece</p>
 										</div>
 									</a>
 								</article>
