--- a/touch.html
+++ b/touch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Touch - Sohee Kim</title>
+		<title>You are the only one for me - Sohee Kim</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,7 +44,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Touch</h1>
+							<h1>You are the only one for me</h1>
 							<video src="images/8c6d765b1ed74a49b40af115e63cfbfd.mp4" controls></video>
 							<p>An interactive art piece that responds to users touch by changing the work on a screen</p>
 						</div>
