--- a/celestial.html
+++ b/celestial.html
@@ -45,7 +45,12 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Celestial Pets</h1>
+							<p> Celestial Pets is a toy line about friendship that spans beyond stars and solar systems. An earthling astronaut corgi is sent to a new system to explore and study three new planets. Along the way, he meets three new aliens, a bunny, a cow, and a cat. They are initially united by a mysterious magical force, and as they proceed to unravel the force’s origins, a strong friendship begins to develop. This is a prototype for blind box styled toys</p>
 							<span class="image main"><img src="images/celestialpets.png" alt="" /></span>
+							<span class="image main"><img src="images/celestial1.png" alt="" /></span>
+							<span class="image main"><img src="images/celestial2.png" alt="" /></span>
+							<span class="image main"><img src="images/celestial3.jpg" alt="" /></span>
+							<span class="image main"><img src="images/celestial4.png" alt="" /></span>
 						</div>
 					</div>
 
