--- a/index.html
+++ b/index.html
@@ -57,21 +57,43 @@
 											<a href="entangled.html">
 												<h2>Entangled Destiny</h2>
 												<div class="content">
-													<p>Immersive expereince that used quantum themes within the instillation</p>
+													<p>Immersive experience that used quantum themes within the instillation</p>
 												</div>
 											</a>
 										</article>
-									<article class="style6">
-										<span class="image">
-											<img src="images/outside.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
-										</span>
-										<a href="outside.html">
-											<h2>Outside</h2>
-											<div class="content">
-												<p>Outside</p>
-											</div>
-										</a>
-									</article>
+										<article class="style6">
+											<span class="image">
+												<img src="images/outside.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+											</span>
+											<a href="outside.html">
+												<h2>Outside</h2>
+												<div class="content">
+													<p>Outside</p>
+												</div>
+											</a>
+										</article>
+										<article class="style3">
+											<span class="image">
+												<img src="images/superbunny.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+											</span>
+											<a href="bunny.html">
+												<h2>Super Bunny</h2>
+												<div class="content">
+													<p>Platforming video game + handmade controler</p>
+												</div>
+											</a>
+										</article>
+										<article class="style5">
+											<span class="image">
+												<img src="images/cat gun 3.PNG" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+											</span>
+											<a href="catgun.html">
+												<h2>Cat Gun</h2>
+												<div class="content">
+													<p>Unity game with handmade controler</p>
+												</div>
+											</a>
+										</article>
 									<article class="style3">
 										<span class="image">
 											<img src="images/flyingpig.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
@@ -80,6 +102,50 @@
 											<h2>Pigs Fly</h2>
 											<div class="content">
 												<p>Motion controlled game</p>
+											</div>
+										</a>
+									</article>
+									<article class="style3">
+										<span class="image">
+											<img src="images/touch.jpg" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+										</span>
+										<a href="touch.html">
+											<h2>You are the only one for me</h2>
+											<div class="content">
+												<p>An interactive art piece</p>
+											</div>
+										</a>
+									</article>
+									<article class="style2">
+										<span class="image">
+											<img src="images/control.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+										</span>
+										<a href="control.html">
+											<h2>Control React</h2>
+											<div class="content">
+												<p>Concept augmentation headpeice</p>
+											</div>
+										</a>
+									</article>
+									<article class="style1">
+										<span class="image">
+											<img src="images/celestialpets.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+										</span>
+										<a href="celestial.html">
+											<h2>Celestial Pets</h2>
+											<div class="content">
+												<p>Concept project for blind boxes</p>
+											</div>
+										</a>
+									</article>
+									<article class="style4">
+										<span class="image">
+											<img src="images/thi2.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
+										</span>
+										<a href="thi.html">
+											<h2>Thi</h2>
+											<div class="content">
+												<p>Electronic stuffed animal</p>
 											</div>
 										</a>
 									</article>
@@ -116,72 +182,6 @@
 											</div>
 										</a>
 									</article>
-									<article class="style5">
-										<span class="image">
-											<img src="images/cat gun 3.PNG" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
-										</span>
-										<a href="catgun.html">
-											<h2>Cat Gun</h2>
-											<div class="content">
-												<p>Unity game with handmade controler</p>
-											</div>
-										</a>
-									</article>
-									<article class="style3">
-										<span class="image">
-											<img src="images/touch.jpg" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
-										</span>
-										<a href="touch.html">
-											<h2>You are the only one for me</h2>
-											<div class="content">
-												<p>An interactive art piece</p>
-											</div>
-										</a>
-									</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/celestialpets.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
-									</span>
-									<a href="celestial.html">
-										<h2>Celestial Pets</h2>
-										<div class="content">
-											<p>Concept project for blind boxes</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/control.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
-									</span>
-									<a href="control.html">
-										<h2>Control React</h2>
-										<div class="content">
-											<p>Concept augmentation headpeice</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/superbunny.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
-									</span>
-									<a href="bunny.html">
-										<h2>Super Bunny</h2>
-										<div class="content">
-											<p>Platforming video game + handmade controler</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/thi2.png" style="width: 100%; height: 375px; object-fit: cover;" alt="" />
-									</span>
-									<a href="thi.html">
-										<h2>Thi</h2>
-										<div class="content">
-											<p>Electronic stuffed animal</p>
-										</div>
-									</a>
-								</article>
 							</section>
 						</div>
 					</div>
