--- a/thi.html
+++ b/thi.html
@@ -45,7 +45,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Thi</h1>
-							<p>I read and was inspired by Octavia Butler’s Lilith’s Brood, Dawn (Book 1 Womb). In the book the character Lilith has a plush doll with no recognizable features besides a body, four limbs and a head. It is white, made of cotton, and crudely sewn. I decided to create this doll and include a touch indicator inside that responds to the users input.</p>
+							<p>I read and was inspired by Octavia Butler’s Lilith’s Brood, Dawn (Book 1 Womb). When conceptualizing a continuation of the story I made an object that would fit into the setting. It is a plush doll with no recognizable features besides a body, four limbs and a head. It is white, made of cotton, and crudely sewn. It is deisgned to be personified by the user. I decided to create this doll and include a touch indicator inside that responds to the users input.</p>
 							<span class="image main"><img src="images/thi2.png" alt="" /></span>
 							<div style="display: flex; flex-direction: row; gap: 20px;">
 								<span class="image main"><iframe src="https://drive.google.com/file/d/1dCqWSSRq00hlD9XO9lBYHGRwL4K6Bx6z/preview" width="640" height="480" allow="autoplay"></iframe></span>
