--- a/catgun.html
+++ b/catgun.html
@@ -45,7 +45,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Cat Gun</h1>
-							<p>A stuffed animal embedded with motion sensor used to control the players movement inside a game</p>
+							<p>A game controlled by bending the plush cat toy</p>
 							<video src="images/cat gun 2.mp4" controls></video>
 						</div>
 					</div>
