--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 											<a href="entangled.html">
 												<h2>Entangled Destiny</h2>
 												<div class="content">
-													<p>Immersive experience that used quantum themes within the instillation</p>
+													<p>Immersive experience that used quantum themes within the installation. Quantum Jam finalist submission</p>
 												</div>
 											</a>
 										</article>
@@ -68,7 +68,7 @@
 											<a href="outside.html">
 												<h2>Outside</h2>
 												<div class="content">
-													<p>Outside</p>
+													<p>Interactive installation + performance</p>
 												</div>
 											</a>
 										</article>
