--- a/touch.html
+++ b/touch.html
@@ -45,7 +45,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>You are the only one for me</h1>
-							<p>An interactive art piece that responds to users touch by changing the work on a screen</p>
+							<p>A 3D printed hand with a light sensor insert that will be used as an input for a screen output. My aim was to create a piece that describes a very common yet new experience between female presenting individuals in which there are conflicting ideas in identity and beauty</p>
 							<video src="images/8c6d765b1ed74a49b40af115e63cfbfd.mp4" controls></video>
 						</div>
 					</div>
