--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 											<a href="entangled.html">
 												<h2>Entangled Destiny</h2>
 												<div class="content">
-													<p>Immersive experience that used quantum themes within the installation. Quantum Jam finalist submission</p>
+													<p>Interactive installation. Quantum Jam finalist submission</p>
 												</div>
 											</a>
 										</article>
@@ -79,7 +79,7 @@
 											<a href="bunny.html">
 												<h2>Super Bunny</h2>
 												<div class="content">
-													<p>Platforming video game + handmade controler</p>
+													<p>2D Platformer game + handmade controller</p>
 												</div>
 											</a>
 										</article>
@@ -90,7 +90,7 @@
 											<a href="catgun.html">
 												<h2>Cat Gun</h2>
 												<div class="content">
-													<p>Unity game with handmade controler</p>
+													<p>Cat simulation with handmade controler</p>
 												</div>
 											</a>
 										</article>
@@ -101,7 +101,7 @@
 										<a href="pigsfly.html">
 											<h2>Pigs Fly</h2>
 											<div class="content">
-												<p>Motion controlled game</p>
+												<p>Motion controlled game with teachable machine + socket.io</p>
 											</div>
 										</a>
 									</article>
@@ -112,7 +112,7 @@
 										<a href="touch.html">
 											<h2>You are the only one for me</h2>
 											<div class="content">
-												<p>An interactive art piece</p>
+												<p>Interactive installation</p>
 											</div>
 										</a>
 									</article>
@@ -123,7 +123,7 @@
 										<a href="control.html">
 											<h2>Control React</h2>
 											<div class="content">
-												<p>Concept augmentation headpeice</p>
+												<p>Concept wearable</p>
 											</div>
 										</a>
 									</article>
@@ -134,7 +134,7 @@
 										<a href="celestial.html">
 											<h2>Celestial Pets</h2>
 											<div class="content">
-												<p>Concept project for blind boxes</p>
+												<p>Blind box concept</p>
 											</div>
 										</a>
 									</article>
@@ -145,7 +145,7 @@
 										<a href="thi.html">
 											<h2>Thi</h2>
 											<div class="content">
-												<p>Electronic stuffed animal</p>
+												<p>Interactive object</p>
 											</div>
 										</a>
 									</article>
@@ -156,7 +156,7 @@
 										<a href="artwork.html">
 											<h2>Artworks</h2>
 											<div class="content">
-												<p>My previous artistic pieces</p>
+												<p>Traditional artwork</p>
 											</div>
 										</a>
 									</article>
@@ -167,7 +167,6 @@
 										<a href="photography.html">
 											<h2>Photography</h2>
 											<div class="content">
-												<p>My previous photographic pieces</p>
 											</div>
 										</a>
 									</article>
@@ -178,7 +177,6 @@
 										<a href="3dwork.html">
 											<h2>3D Modeling</h2>
 											<div class="content">
-												<p>My 3D modeling work</p>
 											</div>
 										</a>
 									</article>
