--- a/outside.html
+++ b/outside.html
@@ -45,7 +45,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Outside</h1>
-							<p>Interative instillation / performance piece depicting the expereince of living with agoraphobia. Videography by Phat Nguyen</p>
+							<p>Interactive installation / performance piece depicting the expereince of living with agoraphobia. Videography by Phat Nguyen</p>
 							<iframe src="https://drive.google.com/file/d/1dkvXBrixj_ny3_YsiKHov1_2DjStOcel/preview" width="640" height="480" allow="autoplay"></iframe>
 						</div>
 					</div>
