--- a/pigsfly.html
+++ b/pigsfly.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Pigs Fly - Sohee Kim</title>
+		<title>When Pigs Fly - Sohee Kim</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,7 +44,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Pigs Fly</h1>
+							<h1>When Pigs Fly</h1>
                             <p>An interactive game where the movement is controlled using machine learning. The players webcam footage is fed through a teachable machines model which determines, based on a set of poses, what inputs to pass through to the game.</p>
 							<span class="image main"><video src="images/piggamevid.mp4" controls></video></span>
                             <span class="image main"><video src="images/pigvid2.mp4" controls></video></span>
